# tensorviz

./: README.md  pyproject.toml
tensorviz/: utils.py
