[project]
name = "tensorviz"
version = "0.1.0"
description = "visualization of tensor data"
authors = [
    {name = "Shingo Higashiguchi"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "tensorly (>=0.9.0,<0.10.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
